--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     content="Sexygame54 สมัครเล่น สล็อตออนไลน์ สล็อตมือถือ กับเว็บ Gclub44 รับโบนัส100% เล่นสล็อตได้เงินจริง แจ๊คพ็อตแตกง่าย พร้อมให้บริการตลอด 24 ชั่วโมง ฝาก-ถอน ผ่านระบบ AI ROBOT เราให้บริการเจ้าแรกในไทย">
   <title>Sexygame54 สล็อตบนมือถือ ฝากเงินเพียง 1 บาท [ระบบ Auto]</title>
   <link href="https://fonts.googleapis.com/css?family=Prompt&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
+
   <link rel="stylesheet" href="asset/css/bootstrap.min.css">
-  <link rel="stylesheet" href="asset/js/custom/main.js">
   <link rel="stylesheet" href="asset/css/custom/main.css">
   <link rel="icon" href="favicon.ico">
-
+  <script src="asset/js/jquery-3.3.1.slim.min.js"></script>
+  <script src="asset/js/bootstrap.min.js"></script>
+  <!-- <script src="asset/js/popper.min.js"></script> -->
+  
 </head>
 
 <body>
-
+  
   <head>
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark nav-bg">
       <div class="container">
-        <img src="asset/img/logomini.png" width="60px" alt="sexygamelogo bar">
+        <img src="asset/img/logomini.png" width="100px" alt="sexygamelogo bar">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,13 +38,10 @@
               <a class="nav-link" href="#">หน้าแรก <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">สมัครสมาชิก</a>
+              <a class="nav-link" href="#">ฝาก-ถอน</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">โปรโมชั่น</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">ฝาก-ถอน</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">ดาวน์โหลด</a>
@@ -53,18 +50,50 @@
               <a class="nav-link" href="#">ติดต่อเรา</a>
             </li>
           </ul>
+          
           <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
             </li>
             <li class="nav-item">
-              <h5 class="login-a hvr-pulse-grow nav-link " href="#">Line ID: @Sexygame54</h5>
+              <h5 class="login-a hvr-pulse-grow nav-link " href="#">สมัครสมาชิก/เข้าสู่ระบบ</h5>
+            </li>
+            <li class="nav-item ml-2">
+              <h5 class="line-a hvr-pulse-grow nav-link " href="#">@line:124</h5>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </head>
-  <div class="container">
+  
+ <div class="container">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="asset/img/sy54.jpg"
+          alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="asset/img/syy54.jpg"
+          alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="asset/img/syyy5.jpg"
+          alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+  <!-- <div class="container">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -72,7 +101,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="container">
     <div class="tab-content-detail p-2 pl-10 pr-0 pt-20 ml-20 mr-15 ">
@@ -89,9 +118,12 @@
               รับประสบการณ์การพนันที่สมจริงเสมือนกับไปเล่นที่คาสิโนระดับโลกผ่านระบบออนไลน์
               เว็บไซต์ของเราเปิดรับสมาชิกใหม่ตลอด 24 ช.ม.
             </p>
+            <p class="text-muster text-center">
+              การเล่นบาคาร่า รูเล็ต ไฮโล ไพ่เสือมังกร โดยให้สาวๆสวยๆ เพื่อมาแจกไพ่ คอนเซปนี้ชื่อว่า Sexy baccarat หรือที่เรียกว่าเซ็กซี่บาคาร่า 
+            </p>
             <div class="text-center my-2">
               <a href="#">
-                <img src="asset/img/sexygame54_line.png" target="blank" width="280px" alt="sexygame54Logo">
+                <img src="asset/img/sexygame54_line_pic.png"  target="blank" width="280px" alt="sexygame54Logo">
               </a>
             </div>
           </div>
@@ -114,11 +146,12 @@
         </div>
       </div>
 
-
+      <div class="container">
       <div class="Detail-bar mb-2 mx-auto">
-        <div class="text-muster text-center">
-          <p>ขั้นตอนการสมัครสมาชิกกับ sexygame54 เพียง 3 ขั้นตอนง่ายๆ มาเป็นส่วนหนึ่งกับเราด้วยกัน</p>
+        <div class="text-onboard p-1 text-center">
+          <p class="mb-1">ขั้นตอนการสมัครสมาชิกกับ sexygame54 เพียง 3 ขั้นตอนง่ายๆ มาเป็นส่วนหนึ่งกับเราด้วยกัน</p>
         </div>
+      </div>
       </div>
 
       <div class="row">
@@ -140,6 +173,7 @@
             <span class="text-muster">โอนเงินขั้่นต่ำเพียง 1 บาท ไม่ต้องส่งสลิป รอรับ user ภายใน 30 วินาที</span>
           </div>
         </div>
+
         <div class="col-sm-4 col-sm-3  px-2 mb-3">
           <div class="text-center p-1 shadow-sm">
             <img class="img-fluid my-2" src="asset/img/corext1.png" alt="sexygame54board">
@@ -153,8 +187,8 @@
 
       <div class="container">
         <div class="Detail-bar my-2 mx-auto">
-          <div class="text-muster text-center">
-            <p> เรามีเกมส์สล็อตให้เลือกมากกว่า 100 เกมส์ ไว้ให้คุณได้เล่นที่ SEXYGAME54 </p>
+          <div class="text-onboard p-1 text-center">
+            <p class="mb-1"> เรามีเกมส์สล็อตให้เลือกมากกว่า 100 เกมส์ ไว้ให้คุณได้เล่นที่ SEXYGAME54 </p>
           </div>
         </div>
 
@@ -296,8 +330,8 @@
 
 
           <div class="Detail-bar my-4 mx-auto">
-            <div class="text-muster text-center">
-              <p>เรามีโปรโมชั่นมากมาย ทุกวัน ทุกสัปดาห์ อย่าลืมติดตามข่าวสารทุกวันผ่าน @Line</p>
+            <div class="text-onboard p-1 text-center">
+              <p class="mb-1">เรามีโปรโมชั่นมากมาย ทุกวัน ทุกสัปดาห์ อย่าลืมติดตามข่าวสารทุกวันผ่าน @Line</p>
             </div>
           </div>
 
