--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <head>
     <nav class="navbar navbar-expand-lg navbar-light navbar-dark nav-bg">
       <div class="container">
-        <img src="asset/img/logomini.png" width="100px" alt="sexygamelogo bar">
+        <img src="asset/img/logomini.png" width="80px" alt="sexygamelogo bar">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="text-muster collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
+        <div class="text-muster collapse navbar-collapse pull-left" id="navbarSupportedContent">
+          <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="#">หน้าแรก <span class="sr-only">(current)</span></a>
             </li>
@@ -50,10 +50,10 @@
             <li class="nav-item dropdown">
             </li>
             <li class="nav-item">
-              <h5 class="login-a hvr-pulse-grow nav-link " href="#">สมัครสมาชิก/เข้าสู่ระบบ</h5>
+              <h6 class="login-a hvr-pulse-grow nav-link " href="#">สมัครสมาชิก/เข้าสู่ระบบ</h6>
             </li>
             <li class="nav-item ml-2">
-              <h5 class="line-a hvr-pulse-grow nav-link " href="#">@line:@162fiqhg</h5>
+              <h6 class="line-a hvr-pulse-grow nav-link " href="#">@line:@162fiqhg</h6>
             </li>
           </ul>
         </div>
