--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
             </li>
-            <li class="nav-item">
+            <li class="nav-item mr-10">
               <h6 class="login-a hvr-pulse-grow nav-link " href="#">สมัครสมาชิก/เข้าสู่ระบบ</h6>
             </li>
             <li class="nav-item ml-2">
