--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords"
     content="sexygame54,สล็อต,สล็อต sexygame54,เซ็กซี่บาคาร่า ,sexybaccarat,บา คา ร่า 54,สมัคร คา สิ โน,sexy บาคาร่า,เซ็กซี่เกม54,บิงโกไลน์,เกมส์หมีแพนด้า">
   <meta name="description"
-    content="Sexygame54 สมัครเล่น สล็อตออนไลน์ สล็อตมือถือ กับเว็บ Gclub44 รับโบนัส100% เล่นสล็อตได้เงินจริง แจ๊คพ็อตแตกง่าย พร้อมให้บริการตลอด 24 ชั่วโมง ฝาก-ถอน ผ่านระบบ AI ROBOT เราให้บริการเจ้าแรกในไทย">
+    content="Sexygame54 สมัครเล่น สล็อตออนไลน์ สล็อตมือถือ กับเว็บ Gclub44 รับโบนัส100% เล่นสล็อตได้เงินจริง แจ๊คพ็อตแตกง่าย พร้อมให้บริการตลอด 24 ชั่วโมง ฝาก-ถอน sexygame, เซ็กซี่บาคาร่า, บาคาร่า, บาคาร่าออนไลน์, คาสิโนออนไลน์, คาสิโน, เว็บพนัน, เว็บพนันออนไลน์, แทงคาสิโน, แทงบาคาร่า, sexybaccarat">
   <title>Sexygame54 สล็อตบนมือถือ ฝากเงินเพียง 1 บาท [ระบบ Auto]</title>
   <link href="https://fonts.googleapis.com/css?family=Prompt&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="asset/css/bootstrap.min.css">
